pass @ removing matrix initialization of the engine so that non-matrix workflows can be handled as well

--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ WEBHOOK_LISTENER_PORT=8080
 #
 # Matrix
 #
-MATRIX_HOMESERVER=http://localhost:8008
-MATRIX_USERNAME=morpheus
-MATRIX_PASSWORD=redpill
+#MATRIX_HOMESERVER=http://localhost:8008
+#MATRIX_USERNAME=morpheus
+#MATRIX_PASSWORD=redpill
