setup a skeleton of admin api server on :8282

--- a/.env
+++ b/.env
@@ -6,6 +6,9 @@ WEBHOOK_LISTENER_PORT=8080
 # Running a static file server for UI
 STATIC_SERVER_PORT=8181
 
+# Running an admin api server for UI
+ADMIN_API_SERVER_PORT=8282
+
 #
 # Matrix
 #
