pass @ parsing toml config into struct
- toml primitives decoding pending
- introduced another variable in .env file for specifying the path to TOML file

--- a/.env
+++ b/.env
@@ -3,6 +3,9 @@
 #
 WEBHOOK_LISTENER_PORT=8080
 
+# Path to TOML file where workflows are defined, from which they will be imported into the database
+WORKFLOWS_DEF_TOML_FILE=/Users/ashfame/git/matrix-workflow-builder/workflows.toml
+
 #
 # Matrix
 #
