adapt postMatrixMessage workflow step to utilize a specified bot account
- unit tests included
- final testing pending

--- a/workflows.toml
+++ b/workflows.toml
@@ -59,5 +59,6 @@ variety = "postMatrixMessage"
 [workflow.step.meta]
 messagePrefix = "[AFK Log]"
 matrixRoom = "" # Optional but would be overridden if specified in payload
+asBot = "bot_afk"
 
 #################################################################
