--- a/.env.sample
+++ b/.env.sample
@@ -16,6 +16,6 @@ WORKFLOWS_DEF_TOML_FILE=./workflows.toml
 #
 # Matrix
 #
-#MATRIX_SERVER_NAME=http://matrix.test:8008
+#MATRIX_SERVER_NAME=matrix.test:443
 #MATRIX_USERNAME=morpheus
 #MATRIX_PASSWORD=redpill
