--- a/.env.sample
+++ b/.env.sample
@@ -13,7 +13,9 @@ WEBHOOK_LISTENER_PORT=8080
 # this is where workflows are defined, from which they will be imported into the database
 WORKFLOWS_DEF_TOML_FILE=./resources/workflows.toml
 
+#
 # Matrix
-MATRIX_SERVER_NAME=localhost:8008
-MATRIX_USERNAME=admin
-MATRIX_PASSWORD=admin
+#
+#MATRIX_SERVER_NAME=matrix.test:443
+#MATRIX_USERNAME=morpheus
+#MATRIX_PASSWORD=redpill
