uncomment MATRIX_* env vars now that they are required values

--- a/.env.sample
+++ b/.env.sample
@@ -16,9 +16,9 @@ WORKFLOWS_DEF_TOML_FILE=./resources/workflows.toml
 #
 # Matrix
 #
-#MATRIX_SERVER_NAME=matrix.test:443
-#MATRIX_USERNAME=morpheus
-#MATRIX_PASSWORD=redpill
+MATRIX_SERVER_NAME=matrix.test:443
+MATRIX_USERNAME=morpheus
+MATRIX_PASSWORD=redpill
 
 # Bots
 # Note these are just the passwords, you must configure the bot in resources/seeds/bots.go.
