add SALT env variable for supplying in OLM machine for stronger encryption

--- a/.env.sample
+++ b/.env.sample
@@ -13,6 +13,11 @@ WEBHOOK_LISTENER_PORT=8080
 # this is where workflows are defined, from which they will be imported into the database
 WORKFLOWS_DEF_TOML_FILE=./resources/workflows.toml
 
+# Cryptography
+# SALT is what makes your encryption key different from others running the same program, hence not a weak encryption
+# Use a long random string, that has atleast 32 characters in it
+SALT=""
+
 #
 # Matrix
 #
